[package]
name = "pkts-common"
authors = ["Nathaniel Bennett <me[at]nathanielbennett[dotcom]>"]
description = "helper library for shared types/utilities among rscap and pkts"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/pkts-rs/pkts"
keywords = ["packets", "network", "scapy", "parsing"]
categories = ["network-programming", "encoding", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
