[package]
name = "pkts"
authors = ["Nathaniel Bennett <me[at]nathanielbennett[dotcom]>"]
description = "tools for building, inspecting and modifying network protocol packets"
# GATs stabilized in this version; required for `Sequence` types
rust-version = "1.66"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/pkts-rs/pkts"
keywords = ["packets", "network", "scapy", "parsing"]
categories = ["network-programming", "encoding", "parsing"]

[features]
default = ["std", "custom_layer_selection", "error_string"]
std = ["alloc"]
alloc = []
error_string = []
custom_layer_selection = ["pkts-macros/custom_layer_selection"]

[dependencies]
bitflags = { version = "2.6.0" }
pkts-macros = { path = "../pkts-macros", version = "0.2.0" }
pkts-common = { path = "../pkts-common", version = "0.2.0" }
