[package]
name = "pkts"
authors = ["Nathaniel Bennett <me[at]nathanielbennett[dotcom]>"]
description = "tools for building, inspecting and modifying network protocol packets"
# 1.56 - Rust edition 2021 released; `bitflags`/`quote`/`proc_macro2` MSRV
# 1.61 - `syn` MSRV
# 1.63 - `array::from_fn` stabilized
# 1.65 - GATs stabilized (required for some `Sequence` types); `core::CStr` stabilized (our MSRV)
# 1.77 - `core::net` stabilized (needed for `no-std` `IpAddr` types)--handled by cfg
rust-version = "1.65"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2018"
repository = "https://github.com/pkts-rs/pkts"
keywords = ["packets", "network", "scapy", "parsing"]
categories = ["network-programming", "encoding", "parsing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rustc_1_77)'] }

[features]
default = ["std", "custom_layer_selection", "error_string"]
std = ["alloc"]
alloc = []
error_string = []
custom_layer_selection = ["pkts-macros/custom_layer_selection"]

[dependencies]
bitflags = { version = "2.6.0" }
pkts-macros = { path = "../pkts-macros", version = "0.2.0" }
pkts-common = { path = "../pkts-common", version = "0.2.0" }
